[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Text.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_newValue.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Description_Container.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_deleteKey.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/Tab_Template.gd" type="Script" id=6]
[ext_resource path="res://addons/Database_Manager/Theme and Style/main_25.tres" type="Theme" id=7]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/VersionLabel.tscn" type="PackedScene" id=8]

[node name="Tab_Manager" type="Control" groups=["Tab"]]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="VBox1" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
margin_right = 900.0
margin_bottom = 25.0

[node name="RefreshData" type="Button" parent="VBox1/HBox1"]
margin_right = 97.0
margin_bottom = 25.0
text = "Reset Values"

[node name="Center1" type="CenterContainer" parent="VBox1/HBox1"]
margin_left = 101.0
margin_right = 539.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox1/HBox1/Center1"]
margin_left = 54.0
margin_right = 383.0
margin_bottom = 25.0
text = "CHANGES HAVE BEEN MADE BUT NOT SAVED"

[node name="SaveChanges" type="Button" parent="VBox1/HBox1"]
margin_left = 543.0
margin_right = 656.0
margin_bottom = 25.0
text = "Save Changes"

[node name="Label" type="Label" parent="VBox1/HBox1"]
margin_left = 660.0
margin_right = 675.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="SaveNewItem" type="Button" parent="VBox1/HBox1"]
visible = false
margin_left = 664.0
margin_right = 780.0
margin_bottom = 25.0
text = "Save New Item"

[node name="Label2" type="Label" parent="VBox1/HBox1"]
visible = false
margin_left = 784.0
margin_right = 799.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="AddNewItem" type="Button" parent="VBox1/HBox1"]
margin_left = 679.0
margin_right = 788.0
margin_bottom = 25.0
text = "Add New Item"

[node name="Label3" type="Label" parent="VBox1/HBox1"]
margin_left = 792.0
margin_right = 807.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="DeleteSelectedItem" type="Button" parent="VBox1/HBox1"]
margin_left = 811.0
margin_right = 900.0
margin_bottom = 25.0
text = "Delete Item"

[node name="Cancel" type="Button" parent="VBox1/HBox1"]
visible = false
margin_left = 970.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Cancel"

[node name="Label4" type="Label" parent="VBox1/HBox1"]
visible = false
margin_left = 784.0
margin_right = 799.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="HBox2" type="HBoxContainer" parent="VBox1"]
margin_top = 29.0
margin_right = 900.0
margin_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -5

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2"]
margin_right = 175.0
margin_bottom = 542.0
rect_min_size = Vector2( 175, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table_Buttons" type="VBoxContainer" parent="VBox1/HBox2/Scroll1"]
margin_right = 175.0
margin_bottom = 542.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel1" type="PanelContainer" parent="VBox1/HBox2"]
margin_left = 170.0
margin_right = 900.0
margin_bottom = 542.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBox1/HBox2/Panel1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 723.0
margin_bottom = 535.0
color = Color( 0, 0, 0, 0.0823529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox2/Panel1"]
margin_left = 7.0
margin_top = 7.0
margin_right = 723.0
margin_bottom = 535.0

[node name="HBox1" type="HBoxContainer" parent="VBox1/HBox2/Panel1/VBox1"]
margin_right = 716.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox1"]
margin_right = 351.0
margin_bottom = 240.0
size_flags_horizontal = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1"]
margin_right = 351.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Key" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 351.0
margin_bottom = 98.0
label_text = "Key"

[node name="Label" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1/Key" index="0"]
margin_right = 351.0
text = "Key"

[node name="Input" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1/Key" index="1"]
margin_right = 351.0
margin_bottom = 84.0

[node name="input_templateBuffer" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1/Key" index="2"]
margin_top = 88.0
margin_right = 351.0
margin_bottom = 98.0

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBox1/HBox1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 355.0
margin_right = 360.0
margin_bottom = 240.0
rect_min_size = Vector2( 5, 0 )

[node name="Scroll2" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox1"]
margin_left = 364.0
margin_right = 716.0
margin_bottom = 240.0
size_flags_horizontal = 3

[node name="VBox2" type="VBoxContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll2"]
margin_right = 352.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBox1"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 244.0
margin_right = 716.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 10 )

[node name="HBox2" type="HBoxContainer" parent="VBox1/HBox2/Panel1/VBox1"]
margin_top = 258.0
margin_right = 716.0
margin_bottom = 283.0

[node name="Label2" type="Label" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
visible = false
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 0 )

[node name="CenterContainer" type="CenterContainer" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_right = 491.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox1/HBox2/Panel1/VBox1/HBox2/CenterContainer"]
margin_left = 190.0
margin_right = 300.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Custom Fields"
align = 1
valign = 1

[node name="AddField" type="Button" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_left = 495.0
margin_right = 604.0
margin_bottom = 25.0
text = "Add New Field"

[node name="Label" type="Label" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_left = 608.0
margin_right = 623.0
margin_bottom = 25.0
rect_min_size = Vector2( 15, 0 )

[node name="DeleteField" type="Button" parent="VBox1/HBox2/Panel1/VBox1/HBox2"]
margin_left = 627.0
margin_right = 716.0
margin_bottom = 25.0
text = "Delete Field"

[node name="Scroll1" type="HBoxContainer" parent="VBox1/HBox2/Panel1/VBox1"]
margin_top = 287.0
margin_right = 716.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll1" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBox1/Scroll1"]
margin_right = 351.0
margin_bottom = 241.0
size_flags_horizontal = 3

[node name="VBox1" parent="VBox1/HBox2/Panel1/VBox1/Scroll1/Scroll1" instance=ExtResource( 4 )]
margin_top = 0.0
margin_right = 351.0
margin_bottom = 0.0
size_flags_vertical = 1

[node name="Panel" type="Panel" parent="VBox1/HBox2/Panel1/VBox1/Scroll1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 355.0
margin_right = 360.0
margin_bottom = 241.0
rect_min_size = Vector2( 5, 0 )

[node name="Scroll2" type="ScrollContainer" parent="VBox1/HBox2/Panel1/VBox1/Scroll1"]
margin_left = 364.0
margin_right = 716.0
margin_bottom = 241.0
size_flags_horizontal = 3

[node name="VBox2" parent="VBox1/HBox2/Panel1/VBox1/Scroll1/Scroll2" instance=ExtResource( 4 )]
margin_top = 0.0
margin_right = 352.0
margin_bottom = 0.0
size_flags_vertical = 1

[node name="Hbox3" type="HBoxContainer" parent="VBox1"]
margin_top = 575.0
margin_right = 900.0
margin_bottom = 600.0
size_flags_horizontal = 3
alignment = 1

[node name="VersionLabel" parent="VBox1/Hbox3" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 205.0
margin_right = 695.0
margin_bottom = 25.0

[node name="Popups" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 250 )
color = Color( 0, 0, 0, 0.894118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup_delete_confirm" type="Popup" parent="Popups"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -50.0
margin_right = 116.5
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="ColorRect" parent="Popups/popup_delete_confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
margin_right = 233.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
visible = false
margin_right = 271.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Are you sure you want to delete %?"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 233.0
margin_bottom = 100.0

[node name="Accept" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 114.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 233.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Cancel"

[node name="popup_newValue" parent="Popups" instance=ExtResource( 3 )]
visible = false

[node name="Label" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text" index="0"]
margin_right = 340.0
text = "New Field Name"

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text" index="1"]
margin_right = 340.0
margin_bottom = 132.0

[node name="input_templateBuffer" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text" index="2"]
visible = false
margin_top = 122.0
margin_right = 340.0
margin_bottom = 132.0

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection" index="1"]
text = "Text"
items = [ "Text", null, false, 0, null, "List", null, false, 1, null, "Input Control", null, false, 2, null, "Number Range", null, false, 3, null, "Sound Effect", null, false, 4, null, "Whole Number", null, false, 5, null, "Decimal Number", null, false, 6, null, "True or False", null, false, 7, null, "Dropdown List", null, false, 8, null, "Icon Display", null, false, 9, null, "Scene Path", null, false, 10, null, "Sprite", null, false, 11, null, "Vector 2 or 3", null, false, 12, null ]

[node name="Input" parent="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection" index="1"]
text = "Character Classes"
items = [ "Character Classes", null, false, 0, null, "Control Categories", null, false, 1, null, "DataTypes", null, false, 2, null, "Field_Pref_Values", null, false, 3, null, "Item_Type", null, false, 4, null, "Items", null, false, 5, null, "Maps", null, false, 6, null ]

[node name="popup_deleteKey" parent="Popups" instance=ExtResource( 5 )]

[node name="Label" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="0"]
margin_bottom = 25.0

[node name="Itemlist" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="1"]
margin_top = 29.0
margin_bottom = 207.0
items = [ "Nestor", null, false, "Hilda", null, false ]

[node name="HBoxContainer" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="2"]
margin_top = 211.0

[node name="Accept" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer" index="0"]
margin_bottom = 25.0

[node name="Cancel" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer" index="1"]
margin_bottom = 25.0

[node name="ListInput" type="Control" parent="Popups"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FileSelect" type="Control" parent="Popups"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="VBox1/HBox1/RefreshData" to="." method="_on_RefreshData_button_up"]
[connection signal="button_up" from="VBox1/HBox1/SaveChanges" to="." method="_on_Save_button_up"]
[connection signal="button_up" from="VBox1/HBox1/SaveNewItem" to="." method="_on_SaveNewItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/AddNewItem" to="." method="_on_AddNewItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/DeleteSelectedItem" to="." method="_on_DeleteSelectedItem_button_up"]
[connection signal="button_up" from="VBox1/HBox1/Cancel" to="." method="_on_Cancel_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Panel1/VBox1/HBox2/AddField" to="." method="_on_AddField_button_up"]
[connection signal="button_up" from="VBox1/HBox2/Panel1/VBox1/HBox2/DeleteField" to="." method="display_options"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_deletePopup_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_delete_confirm/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on__deletePopup_Cancel_button_up"]
[connection signal="button_up" from="Popups/popup_newValue/PanelContainer/VBox1/HBox2/Accept" to="." method="_on_NewField_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_newValue/PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_NewField_Cancel_button_up"]
[connection signal="item_selected" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" to="." method="_on_Itemlist_item_selected"]
[connection signal="button_up" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer/Accept" to="." method="_on_DeleteField_Accept_button_up"]
[connection signal="button_up" from="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_DeleteField_Cancel_button_up"]

[editable path="VBox1/HBox2/Panel1/VBox1/HBox1/Scroll1/VBox1/Key"]
[editable path="Popups/popup_newValue"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox1/Input_Text"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection"]
[editable path="Popups/popup_newValue/PanelContainer/VBox1/HBox1/Table_Selection"]
[editable path="Popups/popup_deleteKey"]
